--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "widgets.h": "c",
         "global.h": "c",
         "random": "c",
-        "service_functions.h": "c"
+        "service_functions.h": "c",
+        "service_widgets.h": "c"
     }
 }
