Обновил настройки vs code: f5 - debug; ctrl+shift+b - build & exec

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "global.h": "c",
         "random": "c",
         "service_functions.h": "c",
-        "service_widgets.h": "c"
+        "service_widgets.h": "c",
+        "math.h": "c"
     }
 }
