Теперь открываемый файл нормально отображается

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "random": "c",
         "service_functions.h": "c",
         "service_widgets.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "core.h": "c"
     }
 }
