Вынес создание box_win для input_menu в отдеельную функцию; Вынес создание и отображение input_menu в отдельную функцию

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "service_functions.h": "c",
         "service_widgets.h": "c",
         "math.h": "c",
-        "core.h": "c"
+        "core.h": "c",
+        "stdbool.h": "c"
     }
 }
