--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "service_widgets.h": "c",
         "math.h": "c",
         "core.h": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "pthread.h": "c"
     }
 }
