--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "math.h": "c",
         "core.h": "c",
         "stdbool.h": "c",
-        "pthread.h": "c"
+        "pthread.h": "c",
+        "time.h": "c",
+        "locale.h": "c"
     }
 }
